@@ -2,7 +2,7 @@ Package: RStoolbox
 Type: Package
 Title: Tools for Remote Sensing Data Analysis
 Version: 0.1.2.9000
-Date: 2015-11-03
+Date: 2015-11-11
 Authors@R: c(
     person("Benjamin", "Leutner", role=c("cre", "aut"), email="benjamin.leutner@uni-wuerzburg.de"),
     person("Ned", "Horning", role ="aut", email="horning@amnh.org")
