@@ -3,6 +3,7 @@
 S3method(fortify,RasterBrick)
 S3method(fortify,RasterLayer)
 S3method(fortify,RasterStack)
+S3method(predict,superClass)
 S3method(print,superClass)
 S3method(print,unsuperClass)
 S3method(summary,ImageMetaData)
